--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using JuMP, GLPK, Clp, Cbc"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,7 +32,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ x5 + x6 \\geq 4 $$"
+      ],
+      "text/plain": [
+       "x5 + x6 >= 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "model = Model(GLPK.Optimizer)\n",
+    "\n",
+    "# x1, x2, x3, x4, x5, x6 (cantidad de buses que comienzan en cada turno)\n",
+    "@variable(model, x1 >= 0, Int)\n",
+    "@variable(model, x2 >= 0, Int)\n",
+    "@variable(model, x3 >= 0, Int)\n",
+    "@variable(model, x4 >= 0, Int)\n",
+    "@variable(model, x5 >= 0, Int)\n",
+    "@variable(model, x6 >= 0, Int)\n",
+    "\n",
+    "@objective(model, Min, x1 + x2 + x3 + x4 + x5 + x6)\n",
+    "\n",
+    "@constraint(model, x1 + x6 >= 4)   # 12:00 AM - 4:00 AM\n",
+    "@constraint(model, x1 + x2 + x6 >= 8)   # 4:00 AM - 8:00 AM\n",
+    "@constraint(model, x1 + x2 + x3 >= 10)  # 8:00 AM - 12:00 PM\n",
+    "@constraint(model, x3 + x4 >= 12)  # 12:00 PM - 4:00 PM\n",
+    "@constraint(model, x4 + x5 >= 7)   # 4:00 PM - 8:00 PM\n",
+    "@constraint(model, x5 + x6 >= 4)   # 8:00 PM - 12:00 AM\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A JuMP Model\n",
+       "├ solver: GLPK\n",
+       "├ objective_sense: MIN_SENSE\n",
+       "│ └ objective_function_type: AffExpr\n",
+       "├ num_variables: 6\n",
+       "├ num_constraints: 18\n",
+       "│ ├ AffExpr in MOI.GreaterThan{Float64}: 6\n",
+       "│ ├ VariableRef in MOI.GreaterThan{Float64}: 6\n",
+       "│ └ VariableRef in MOI.Integer: 6\n",
+       "└ Names registered in the model\n",
+       "  └ :x1, :x2, :x3, :x4, :x5, :x6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -42,30 +120,6 @@
     }
    ],
    "source": [
-    "using JuMP, GLPK\n",
-    "\n",
-    "model = Model(GLPK.Optimizer)\n",
-    "\n",
-    "# Variables: x1, x2, x3, x4, x5, x6 (cantidad de buses que comienzan en cada turno)\n",
-    "@variable(model, x1 >= 0, Int)\n",
-    "@variable(model, x2 >= 0, Int)\n",
-    "@variable(model, x3 >= 0, Int)\n",
-    "@variable(model, x4 >= 0, Int)\n",
-    "@variable(model, x5 >= 0, Int)\n",
-    "@variable(model, x6 >= 0, Int)\n",
-    "\n",
-    "# Función objetivo: minimizar la cantidad total de autobuses\n",
-    "@objective(model, Min, x1 + x2 + x3 + x4 + x5 + x6)\n",
-    "\n",
-    "# Restricciones de demanda\n",
-    "@constraint(model, x1 + x6 >= 4)   # 12:00 AM - 4:00 AM\n",
-    "@constraint(model, x1 + x2 + x6 >= 8)   # 4:00 AM - 8:00 AM\n",
-    "@constraint(model, x1 + x2 + x3 >= 10)  # 8:00 AM - 12:00 PM\n",
-    "@constraint(model, x3 + x4 >= 12)  # 12:00 PM - 4:00 PM\n",
-    "@constraint(model, x4 + x5 >= 7)   # 4:00 PM - 8:00 PM\n",
-    "@constraint(model, x5 + x6 >= 4)   # 8:00 PM - 12:00 AM\n",
-    "\n",
-    "# Resolver el problema\n",
     "optimize!(model)\n",
     "\n",
     "# Imprimir resultados\n",
@@ -76,7 +130,7 @@
     "println(\"x4 = \", value(x4))\n",
     "println(\"x5 = \", value(x5))\n",
     "println(\"x6 = \", value(x6))\n",
-    "println(\"Cantidad total de autobuses = \", objective_value(model))\n"
+    "println(\"Cantidad total de autobuses = \", objective_value(model))"
    ]
   },
   {
@@ -88,7 +142,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ 50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 \\leq 15000000 $$"
+      ],
+      "text/plain": [
+       "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = Model(Clp.Optimizer)\n",
+    "\n",
+    "@variable(model, x1 >= 0)  # Sencillas\n",
+    "@variable(model, x2 >= 0)  # Dobles\n",
+    "@variable(model, x3 >= 0)  # Triples\n",
+    "@variable(model, x4 >= 0)  # Cuádruples\n",
+    "\n",
+    "# Maximizar los impuestos\n",
+    "@objective(model, Max, 1000*x1 + 1900*x2 + 2700*x3 + 3400*x4)\n",
+    "\n",
+    "# Restricción del área disponible\n",
+    "@constraint(model, 0.18*x1 + 0.28*x2 + 0.4*x3 + 0.5*x4 <= 63.75)\n",
+    "\n",
+    "# Restricción de proporción: Triples y cuádruples >= 25% del total\n",
+    "@constraint(model, x3 + x4 >= 0.25 * (x1 + x2 + x3 + x4))\n",
+    "\n",
+    "# Restricción de proporción: Sencillas >= 10% del total\n",
+    "@constraint(model, x1 >= 0.1 * (x1 + x2 + x3 + x4))\n",
+    "\n",
+    "# Restricción del financiamiento\n",
+    "@constraint(model, 50000*x1 + 70000*x2 + 130000*x3 + 160000*x4 <= 15000000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A JuMP Model\n",
+       "├ solver: Clp\n",
+       "├ objective_sense: MAX_SENSE\n",
+       "│ └ objective_function_type: AffExpr\n",
+       "├ num_variables: 4\n",
+       "├ num_constraints: 8\n",
+       "│ ├ AffExpr in MOI.GreaterThan{Float64}: 2\n",
+       "│ ├ AffExpr in MOI.LessThan{Float64}: 2\n",
+       "│ └ VariableRef in MOI.GreaterThan{Float64}: 4\n",
+       "└ Names registered in the model\n",
+       "  └ :x1, :x2, :x3, :x4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -111,18 +236,52 @@
     }
    ],
    "source": [
-    "using JuMP, Clp\n",
+    "# Resolver el problema\n",
+    "optimize!(model)\n",
     "\n",
-    "# Modelo\n",
-    "model = Model(Clp.Optimizer)\n",
+    "# Mostrar resultados\n",
+    "println(\"Estado de la solución: \", termination_status(model))\n",
+    "println(\"x1 (sencillas): \", value(x1))\n",
+    "println(\"x2 (dobles): \", value(x2))\n",
+    "println(\"x3 (triples): \", value(x3))\n",
+    "println(\"x4 (cuádruples): \", value(x4))\n",
+    "println(\"Valor objetivo: \", objective_value(model), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔢 Enteros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ 50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 \\leq 15000000 $$"
+      ],
+      "text/plain": [
+       "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = Model(Cbc.Optimizer)\n",
     "\n",
-    "# Variables\n",
-    "@variable(model, x1 >= 0)  # Sencillas\n",
-    "@variable(model, x2 >= 0)  # Dobles\n",
-    "@variable(model, x3 >= 0)  # Triples\n",
-    "@variable(model, x4 >= 0)  # Cuádruples\n",
+    "@variable(model, x1 >= 0, Int)  # Sencillas\n",
+    "@variable(model, x2 >= 0, Int)  # Dobles\n",
+    "@variable(model, x3 >= 0, Int)  # Triples\n",
+    "@variable(model, x4 >= 0, Int)  # Cuádruples\n",
     "\n",
-    "# Función objetivo: Maximizar los impuestos\n",
+    "# Maximizar los impuestos\n",
     "@objective(model, Max, 1000*x1 + 1900*x2 + 2700*x3 + 3400*x4)\n",
     "\n",
     "# Restricción del área disponible\n",
@@ -135,30 +294,42 @@
     "@constraint(model, x1 >= 0.1 * (x1 + x2 + x3 + x4))\n",
     "\n",
     "# Restricción del financiamiento\n",
-    "@constraint(model, 50000*x1 + 70000*x2 + 130000*x3 + 160000*x4 <= 15000000)\n",
-    "\n",
-    "# Resolver el problema\n",
-    "optimize!(model)\n",
-    "\n",
-    "# Mostrar resultados\n",
-    "println(\"Estado de la solución: \", termination_status(model))\n",
-    "println(\"x1 (sencillas): \", value(x1))\n",
-    "println(\"x2 (dobles): \", value(x2))\n",
-    "println(\"x3 (triples): \", value(x3))\n",
-    "println(\"x4 (cuádruples): \", value(x4))\n",
-    "println(\"Valor objetivo: \", objective_value(model), \"\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 🔢 Enteros"
+    "@constraint(model, 50000*x1 + 70000*x2 + 130000*x3 + 160000*x4 <= 15000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A JuMP Model\n",
+       "├ solver: COIN Branch-and-Cut (Cbc)\n",
+       "├ objective_sense: MAX_SENSE\n",
+       "│ └ objective_function_type: AffExpr\n",
+       "├ num_variables: 4\n",
+       "├ num_constraints: 12\n",
+       "│ ├ AffExpr in MOI.GreaterThan{Float64}: 2\n",
+       "│ ├ AffExpr in MOI.LessThan{Float64}: 2\n",
+       "│ ├ VariableRef in MOI.GreaterThan{Float64}: 4\n",
+       "│ └ VariableRef in MOI.Integer: 4\n",
+       "└ Names registered in the model\n",
+       "  └ :x1, :x2, :x3, :x4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -207,32 +378,6 @@
     }
    ],
    "source": [
-    "using JuMP, Cbc\n",
-    "\n",
-    "# Modelo\n",
-    "model = Model(Cbc.Optimizer)\n",
-    "\n",
-    "# Variables enteras\n",
-    "@variable(model, x1 >= 0, Int)  # Sencillas\n",
-    "@variable(model, x2 >= 0, Int)  # Dobles\n",
-    "@variable(model, x3 >= 0, Int)  # Triples\n",
-    "@variable(model, x4 >= 0, Int)  # Cuádruples\n",
-    "\n",
-    "# Función objetivo: Maximizar los impuestos\n",
-    "@objective(model, Max, 1000*x1 + 1900*x2 + 2700*x3 + 3400*x4)\n",
-    "\n",
-    "# Restricción del área disponible\n",
-    "@constraint(model, 0.18*x1 + 0.28*x2 + 0.4*x3 + 0.5*x4 <= 63.75)\n",
-    "\n",
-    "# Restricción de proporción: Triples y cuádruples >= 25% del total\n",
-    "@constraint(model, x3 + x4 >= 0.25 * (x1 + x2 + x3 + x4))\n",
-    "\n",
-    "# Restricción de proporción: Sencillas >= 10% del total\n",
-    "@constraint(model, x1 >= 0.1 * (x1 + x2 + x3 + x4))\n",
-    "\n",
-    "# Restricción del financiamiento\n",
-    "@constraint(model, 50000*x1 + 70000*x2 + 130000*x3 + 160000*x4 <= 15000000)\n",
-    "\n",
     "# Resolver el problema\n",
     "optimize!(model)\n",
     "\n",
