--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inciso 2 - Modelo de Producción, Períodos múltiples"
+    "### ⚙️ Inciso 2 - Modelo de Producción, Períodos múltiples"
    ]
   },
   {
