--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +18,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producción óptima: [205.0, 225.0, 190.0, 160.0, 225.0, 225.0]\n",
+      "Inventario óptimo: [25.0, 0.0, 0.0, 20.0, 25.0, 0.0]\n",
+      "Costo total óptimo: 61795.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "using JuMP, GLPK\n",
+    "\n",
+    "# Parámetros\n",
+    "d = [180, 250, 190, 140, 220, 250]  # Demanda mensual\n",
+    "c = [50, 45, 55, 52, 48, 50]        # Costo de producción por ventana\n",
+    "h = [8, 10, 10, 10, 8, 8]           # Costo de almacenamiento por ventana\n",
+    "capacidad = 225                     # Capacidad máxima de producción\n",
+    "\n",
+    "# Modelo\n",
+    "modelo = Model(GLPK.Optimizer)\n",
+    "\n",
+    "# Variables\n",
+    "@variable(modelo, x[1:6] >= 0)  # Producción\n",
+    "@variable(modelo, s[1:6] >= 0)  # Inventario\n",
+    "\n",
+    "# Función objetivo: minimizar el costo total (producción + almacenamiento)\n",
+    "@objective(modelo, Min, sum(c[i] * x[i] for i in 1:6) + sum(h[i] * s[i] for i in 1:6))\n",
+    "\n",
+    "# Restricciones de balance de inventario\n",
+    "@constraint(modelo, s[1] == x[1] - d[1])\n",
+    "for i in 2:6\n",
+    "    @constraint(modelo, s[i] == s[i-1] + x[i] - d[i])\n",
+    "end\n",
+    "\n",
+    "# Restricciones de capacidad de producción\n",
+    "for i in 1:6\n",
+    "    @constraint(modelo, x[i] <= capacidad)\n",
+    "end\n",
+    "\n",
+    "# Resolver el modelo\n",
+    "optimize!(modelo)\n",
+    "\n",
+    "# Obtener resultados\n",
+    "produccion_optima = value.(x)\n",
+    "inventario_optimo = value.(s)\n",
+    "costo_total_optimo = objective_value(modelo)\n",
+    "\n",
+    "println(\"Producción óptima: \", produccion_optima)\n",
+    "println(\"Inventario óptimo: \", inventario_optimo)\n",
+    "println(\"Costo total óptimo: \", costo_total_optimo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +95,9 @@
        "x5 + x6 >= 4"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -72,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +143,9 @@
        "  └ :x1, :x2, :x3, :x4, :x5, :x6"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +207,9 @@
        "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -184,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +257,9 @@
        "  └ :x1, :x2, :x3, :x4"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -213,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -269,8 +324,9 @@
        "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -299,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -319,8 +375,9 @@
        "  └ :x1, :x2, :x3, :x4"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -329,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
