--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,9 +95,8 @@
        "x5 + x6 >= 4"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -105,12 +104,12 @@
     "model = Model(GLPK.Optimizer)\n",
     "\n",
     "# x1, x2, x3, x4, x5, x6 (cantidad de buses que comienzan en cada turno)\n",
-    "@variable(model, x1 >= 0, Int)\n",
-    "@variable(model, x2 >= 0, Int)\n",
-    "@variable(model, x3 >= 0, Int)\n",
-    "@variable(model, x4 >= 0, Int)\n",
-    "@variable(model, x5 >= 0, Int)\n",
-    "@variable(model, x6 >= 0, Int)\n",
+    "@variable(model, x1 >= 0)\n",
+    "@variable(model, x2 >= 0)\n",
+    "@variable(model, x3 >= 0)\n",
+    "@variable(model, x4 >= 0)\n",
+    "@variable(model, x5 >= 0)\n",
+    "@variable(model, x6 >= 0)\n",
     "\n",
     "@objective(model, Min, x1 + x2 + x3 + x4 + x5 + x6)\n",
     "\n",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,17 +134,15 @@
        "├ objective_sense: MIN_SENSE\n",
        "│ └ objective_function_type: AffExpr\n",
        "├ num_variables: 6\n",
-       "├ num_constraints: 18\n",
+       "├ num_constraints: 12\n",
        "│ ├ AffExpr in MOI.GreaterThan{Float64}: 6\n",
-       "│ ├ VariableRef in MOI.GreaterThan{Float64}: 6\n",
-       "│ └ VariableRef in MOI.Integer: 6\n",
+       "│ └ VariableRef in MOI.GreaterThan{Float64}: 6\n",
        "└ Names registered in the model\n",
        "  └ :x1, :x2, :x3, :x4, :x5, :x6"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,13 +159,13 @@
      "output_type": "stream",
      "text": [
       "Estado de la solución: OPTIMAL\n",
-      "x1 = 0.0\n",
-      "x2 = 4.0\n",
-      "x3 = 6.0\n",
-      "x4 = 7.0\n",
-      "x5 = 0.0\n",
-      "x6 = 4.0\n",
-      "Cantidad total de autobuses = 21.0\n"
+      "x1 = 4.5\n",
+      "x2 = 0.0\n",
+      "x3 = 5.5\n",
+      "x4 = 6.5\n",
+      "x5 = 0.5\n",
+      "x6 = 3.5\n",
+      "Cantidad total de autobuses = 20.5\n"
      ]
     }
    ],
