--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,8 @@
     }
    ],
    "source": [
+    "# Parte B. Implementación de la solución con programación lineal.\n",
+    "\n",
     "using JuMP, GLPK\n",
     "\n",
     "# Parámetros\n",
@@ -75,6 +77,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producción óptima (entera): [205.0, 225.0, 190.0, 160.0, 225.0, 225.0]\n",
+      "Inventario óptimo (entero): [25.0, 0.0, 0.0, 20.0, 25.0, 0.0]\n",
+      "Costo total óptimo (entero): 61795.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parte C. Solución óptima con soluciones enteras.\n",
+    "@variable(modelo, x_int[1:6] >= 0, Int)  # Producción entera\n",
+    "@variable(modelo, s_int[1:6] >= 0, Int)  # Inventario entero\n",
+    "\n",
+    "# Función objetivo para la versión entera\n",
+    "@objective(modelo, Min, sum(c[i] * x_int[i] for i in 1:6) + sum(h[i] * s_int[i] for i in 1:6))\n",
+    "\n",
+    "# Restricciones de balance de inventario para la versión entera\n",
+    "@constraint(modelo, s_int[1] == x_int[1] - d[1])\n",
+    "for i in 2:6\n",
+    "    @constraint(modelo, s_int[i] == s_int[i-1] + x_int[i] - d[i])\n",
+    "end\n",
+    "\n",
+    "# Restricciones de capacidad de producción para la versión entera\n",
+    "for i in 1:6\n",
+    "    @constraint(modelo, x_int[i] <= capacidad)\n",
+    "end\n",
+    "\n",
+    "# Resolver el modelo con las restricciones enteras\n",
+    "optimize!(modelo)\n",
+    "\n",
+    "# Obtener resultados\n",
+    "produccion_entera = value.(x_int)\n",
+    "inventario_entero = value.(s_int)\n",
+    "costo_total_entero = objective_value(modelo)\n",
+    "\n",
+    "println(\"Producción óptima (entera): \", produccion_entera)\n",
+    "println(\"Inventario óptimo (entero): \", inventario_entero)\n",
+    "println(\"Costo total óptimo (entero): \", costo_total_entero)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +144,9 @@
        "x5 + x6 >= 4"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -123,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +191,9 @@
        "  └ :x1, :x2, :x3, :x4, :x5, :x6"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -151,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +255,7 @@
        "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +305,7 @@
        "  └ :x1, :x2, :x3, :x4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +372,7 @@
        "50000 x1 + 70000 x2 + 130000 x3 + 160000 x4 <= 15000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +423,7 @@
        "  └ :x1, :x2, :x3, :x4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -405,8 +456,8 @@
       "Continuous objective value is 363253 - 0.00 seconds\n",
       "Cgl0004I processed model has 4 rows, 4 columns (4 integer (0 of which binary)) and 16 elements\n",
       "Cutoff increment increased from 1e-05 to 99.9999\n",
-      "Cbc0012I Integer solution of -363200 found by DiveCoefficient after 0 iterations and 0 nodes (0.00 seconds)\n",
-      "Cbc0001I Search completed - best objective -363200, took 0 iterations and 0 nodes (0.00 seconds)\n",
+      "Cbc0012I Integer solution of -363200 found by DiveCoefficient after 0 iterations and 0 nodes (0.01 seconds)\n",
+      "Cbc0001I Search completed - best objective -363200, took 0 iterations and 0 nodes (0.01 seconds)\n",
       "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
       "Cuts at root node changed objective from -363253 to -363253\n",
       "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
@@ -423,10 +474,10 @@
       "Objective value:                363200.00000000\n",
       "Enumerated nodes:               0\n",
       "Total iterations:               0\n",
-      "Time (CPU seconds):             0.00\n",
-      "Time (Wallclock seconds):       0.00\n",
+      "Time (CPU seconds):             0.01\n",
+      "Time (Wallclock seconds):       0.01\n",
       "\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "Total time (CPU seconds):       0.01   (Wallclock seconds):       0.01\n",
       "\n"
      ]
     }
